NewOrder: Fixed order X overflow

--- a/web/css/newOrder.css
+++ b/web/css/newOrder.css
@@ -17,6 +17,7 @@
 }
 
 #orders {
+	overflow-x: hidden;
 	overflow-y: scroll;
 	height: 68vh;
 }
